<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/rgb_hex" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/rgb"
                        android:text="00FF00"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:digits="0123456789ABCDEF"
                        android:inputType="textCapCharacters" />

                    <EditText
                        android:id="@+id/rgb1"
                        android:text="00FF00"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:digits="0123456789ABCDEF"
                        android:inputType="textCapCharacters" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/rgb2"
                        android:text="00FF00"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:digits="0123456789ABCDEF"
                        android:inputType="textCapCharacters" />

                    <EditText
                        android:id="@+id/rgb3"
                        android:text="00FF00"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:digits="0123456789ABCDEF"
                        android:inputType="textCapCharacters" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/rgb4"
                        android:text="00FF00"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:digits="0123456789ABCDEF"
                        android:inputType="textCapCharacters" />

                    <EditText
                        android:id="@+id/rgb5"
                        android:text="00FF00"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:digits="0123456789ABCDEF"
                        android:inputType="textCapCharacters" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/blink_params" />

            <EditText
                android:id="@+id/blink_open"
                android:text="500"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:hint="@string/blink_params_open"
                android:inputType="number" />

            <EditText
                android:id="@+id/blink_close"
                android:text="500"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:hint="@string/blink_params_close"
                android:inputType="number" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/stream_params" />

            <EditText
                android:id="@+id/stream_speed"
                android:layout_width="200dp"
                android:text="200"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:hint="@string/stream_params_speed"
                android:inputType="number" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/breathe_params" />

            <EditText
                android:id="@+id/breathe_duration"
                android:layout_width="200dp"
                android:text="200"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:hint="@string/breathe_params_duration"
                android:inputType="number" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/control_special"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/turn_off_index"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:hint="@string/turn_off_index"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_turn_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/turn_off" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <RadioGroup
            android:id="@+id/radio_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:checkedButton="@id/radio_mode_normal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_mode_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_mode_normal" />

            <RadioButton
                android:id="@+id/radio_mode_blink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_mode_blink" />

            <RadioButton
                android:id="@+id/radio_mode_stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_mode_stream" />

            <RadioButton
                android:id="@+id/radio_mode_breathe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_mode_breathe" />

            <RadioButton
                android:id="@+id/radio_mode_single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_mode_single" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_open" />
        <Button
            android:id="@+id/close"
            android:layout_toEndOf="@+id/btn"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="退出" />
    </RelativeLayout>


</LinearLayout>